--- a/home/xorg/i3/config/keybinds.conf
+++ b/home/xorg/i3/config/keybinds.conf
@@ -23,8 +23,8 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+minus exec alacritty
 
 # start thunar
-bindsym $mod+backslash exec thunar
-bindsym $mod+equal exec thunar
+bindsym $mod+backslash exec xfe
+bindsym $mod+equal exec xfe
 
 # kill focused window
 bindsym $mod+Shift+q kill
